--- a/app/css/style.css
+++ b/app/css/style.css
@@ -708,16 +708,16 @@ video {
   max-width: 72rem;
 }
 
-.max-w-7xl{
-  max-width: 80rem;
-}
-
 .max-w-3xl{
   max-width: 48rem;
 }
 
 .max-w-sm{
   max-width: 24rem;
+}
+
+.max-w-7xl{
+  max-width: 80rem;
 }
 
 .flex-1{
@@ -849,8 +849,16 @@ video {
   padding: 7rem;
 }
 
+.p-1{
+  padding: 0.25rem;
+}
+
 .p-6{
   padding: 1.5rem;
+}
+
+.p-2{
+  padding: 0.5rem;
 }
 
 .px-4{
@@ -902,6 +910,10 @@ video {
   padding-left: 1.5rem;
 }
 
+.pr-5{
+  padding-right: 1.25rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -910,12 +922,12 @@ video {
   text-align: center;
 }
 
-.font-Josefin{
-  font-family: Josefin Sans, sans-serif;
-}
-
 .font-Vampiro{
   font-family: Vampiro One, cursive;
+}
+
+.font-Josefin{
+  font-family: Josefin Sans, sans-serif;
 }
 
 .text-3xl{
@@ -1000,6 +1012,11 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
@@ -1013,11 +1030,6 @@ video {
 .text-cyan-700{
   --tw-text-opacity: 1;
   color: rgb(14 116 144 / var(--tw-text-opacity));
-}
-
-.text-black{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1145,6 +1157,10 @@ video {
     margin-right: -2rem;
   }
 
+  .sm\:block{
+    display: block;
+  }
+
   .sm\:px-2{
     padding-left: 0.5rem;
     padding-right: 0.5rem;
@@ -1163,6 +1179,11 @@ video {
   .sm\:text-xs{
     font-size: 0.75rem;
     line-height: 1rem;
+  }
+
+  .sm\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1225,12 +1246,32 @@ video {
     font-size: 0.75rem;
     line-height: 1rem;
   }
+
+  .md\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (min-width: 1280px){
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .lg\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .lg\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1248,5 +1289,10 @@ video {
   .xl\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .xl\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
