--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Josefin+Sans:wght@100;200;300;400;500&family=Poppins:wght@400;500;600&family=Quicksand:wght@300&family=Signika+Negative:wght@300;400&display=swap");
 
 /*
 ! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
@@ -599,11 +597,6 @@ video {
   margin-right: 0.75rem;
 }
 
-.-mx-4{
-  margin-left: -1rem;
-  margin-right: -1rem;
-}
-
 .mr-8{
   margin-right: 2rem;
 }
@@ -708,16 +701,16 @@ video {
   max-width: 72rem;
 }
 
+.max-w-7xl{
+  max-width: 80rem;
+}
+
 .max-w-3xl{
   max-width: 48rem;
 }
 
-.max-w-sm{
-  max-width: 24rem;
-}
-
-.max-w-7xl{
-  max-width: 80rem;
+.max-w-lg{
+  max-width: 32rem;
 }
 
 .flex-1{
@@ -857,10 +850,6 @@ video {
   padding: 1.5rem;
 }
 
-.p-2{
-  padding: 0.5rem;
-}
-
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -906,10 +895,6 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.pl-6{
-  padding-left: 1.5rem;
-}
-
 .pr-5{
   padding-right: 1.25rem;
 }
@@ -922,12 +907,16 @@ video {
   text-align: center;
 }
 
-.font-Vampiro{
-  font-family: Vampiro One, cursive;
+.font-Poppins{
+  font-family: Poppins, sans-serif;
 }
 
-.font-Josefin{
-  font-family: Josefin Sans, sans-serif;
+.font-Signika{
+  font-family: Signika Negative, sans-serif;
+}
+
+.font-Quicksand{
+  font-family: Quicksand, sans-serif;
 }
 
 .text-3xl{
@@ -1152,23 +1141,9 @@ video {
 }
 
 @media (min-width: 360px){
-  .sm\:-mx-8{
-    margin-left: -2rem;
-    margin-right: -2rem;
-  }
-
-  .sm\:block{
-    display: block;
-  }
-
   .sm\:px-2{
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-  }
-
-  .sm\:px-8{
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 
   .sm\:text-6xl{
@@ -1179,11 +1154,6 @@ video {
   .sm\:text-xs{
     font-size: 0.75rem;
     line-height: 1rem;
-  }
-
-  .sm\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
   }
 }
 
@@ -1242,36 +1212,26 @@ video {
     padding-right: 3rem;
   }
 
-  .md\:text-xs{
-    font-size: 0.75rem;
-    line-height: 1rem;
-  }
-
-  .md\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
   .md\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
   }
+
+  .md\:text-xs{
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
 }
 
 @media (min-width: 1280px){
-  .lg\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
+  .lg\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .lg\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .lg\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
   }
 }
 
@@ -1281,18 +1241,13 @@ video {
     padding-bottom: 10rem;
   }
 
-  .xl\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
+  .xl\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .xl\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .xl\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
   }
 }
