--- a/app/css/input.css
+++ b/app/css/input.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Josefin+Sans:wght@100;200;300;400;500&family=Poppins:wght@400;500;600&family=Quicksand:wght@300&family=Signika+Negative:wght@300;400&display=swap");
 
 @tailwind base;
 @tailwind components;
