--- a/mahasiswa/app/css/style.css
+++ b/mahasiswa/app/css/style.css
@@ -621,6 +621,10 @@ video {
   margin-top: 8rem;
 }
 
+.mt-7{
+  margin-top: 1.75rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -635,10 +639,6 @@ video {
 
 .mt-12{
   margin-top: 3rem;
-}
-
-.mt-7{
-  margin-top: 1.75rem;
 }
 
 .block{
@@ -875,14 +875,14 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .py-2{
@@ -900,6 +900,10 @@ video {
 
 .text-center{
   text-align: center;
+}
+
+.text-justify{
+  text-align: justify;
 }
 
 .text-3xl{
@@ -957,6 +961,10 @@ video {
   text-transform: uppercase;
 }
 
+.capitalize{
+  text-transform: capitalize;
+}
+
 .leading-9{
   line-height: 2.25rem;
 }
@@ -1004,6 +1012,11 @@ video {
   color: rgb(14 116 144 / var(--tw-text-opacity));
 }
 
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
 .placeholder-gray-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
   color: rgb(156 163 175 / var(--tw-placeholder-opacity));
@@ -1046,12 +1059,11 @@ video {
 
 body {
   background-image: url(/svg/Sprinkle.svg);
-  background-color: black;
   background-repeat: repeat;
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
-  font-family: Quicksand;
+  font-family: Poppins;
 }
 
 .placeholder\:font-sans::-moz-placeholder{
@@ -1201,11 +1213,6 @@ body {
     padding-right: 3rem;
   }
 
-  .md\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
   .md\:text-xs{
     font-size: 0.75rem;
     line-height: 1rem;
@@ -1213,24 +1220,14 @@ body {
 }
 
 @media (min-width: 1280px){
-  .lg\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .lg\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .lg\:text-xs{
-    font-size: 0.75rem;
-    line-height: 1rem;
-  }
-
-  .lg\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 }
 
@@ -1240,23 +1237,13 @@ body {
     padding-bottom: 10rem;
   }
 
-  .xl\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+  .xl\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .xl\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .xl\:text-xs{
-    font-size: 0.75rem;
-    line-height: 1rem;
-  }
-
-  .xl\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 }
