--- a/mahasiswa/app/css/input.css
+++ b/mahasiswa/app/css/input.css
@@ -24,10 +24,9 @@
 
 body {
   background-image: url(/svg/Sprinkle.svg);
-  background-color: black;
   background-repeat: repeat;
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
-  font-family: Quicksand;
+  font-family: Poppins;
 }
